# franka_telemanipulation

./: CMakeLists.txt  readme.md  testfile.txt
include/: commons.h  examples_common.h  follower.h  leader.h  network_client.h  network_server.h  robot_state_teleop.h  udp_messages.h
src/: follower_franka.cpp  leader_franka.cpp  main.cpp
src/communication/: commons.h  franka_master_client.cpp  franka_slave_server.cpp  robot_state_teleop.cpp  robot_state_teleop.h  udp_asio_client.cpp  udp_asio_server.cpp  udp_client.cpp  udp_client.py  udp_send_state.cpp  udp_server.cpp  udp_server.py
src/examples/: cartesian_impedance_control.cpp  examples_common.cpp  force_control.cpp  generate_joint_position_motion.cpp
src/extra/: franka_slave_server.cpp  udp_asio_client.cpp  udp_asio_server.cpp  udp_server.cpp
src/net/: net_client.cpp
src/teleop/: ClassFile.py  follower.cpp  follower.py  leader.cpp  network_client.cpp  network_server.cpp
